Added stats
